Dodano Wyciaganie nicku i liczby postow uzytkownika z ostatniego stworzonego posta na #polish.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "example": "examples",
     "test": "test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.16.2",
+    "iconv": "^2.3.0",
+    "steem": "^0.7.1"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "mocha"
